<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Titolo di gruppo per "Anime" -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/public_20dp_e8eaed_fill0_wght400_grad0_opsz20" />
        <item
            android:id="@+id/nav_search"
            android:title="@string/search"
            android:icon="@drawable/search" />
        <item
            android:id="@+id/nav_favorites"
            android:title="@string/favorites"
            android:icon="@drawable/ic_favorite" />
        <item
            android:id="@+id/nav_top_anime"
            android:title="@string/top_anime"
            android:icon="@drawable/ic_topanime" />
    </group>

    <!-- Divider -->
    <item
        android:title="@string/personal_area"
        android:enabled="false" />

    <!-- Sezione "Personal Area" -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/setting"
            android:icon="@drawable/settings_24dp_e8eaed_fill0_wght400_grad0_opsz24" />
    </group>

</menu>